--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,7 +1,17 @@
-.git
+.git/
 .gitignore
 
-index.js
+.vscode/
 
-node_modules
-#!include:.gitignore
+.gcloudignore
+cloudbuild.yaml
+
+tsconfig.json
+
+.eslintrc.js
+.prettierrc
+
+index.ts
+
+LICENSE
+README.md
