--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "subscription-manager-bot",
-  "version": "1.0.0",
-  "description": "Telegram Bot to restrict channel member to paying customers",
-  "main": "index.js",
-  "devDependencies": {
-    "@types/express": "^4.17.8",
-    "typescript": "^4.0.3"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KnorpelSenf/subscription-manager-bot.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KnorpelSenf/subscription-manager-bot/issues"
-  },
-  "homepage": "https://github.com/KnorpelSenf/subscription-manager-bot#readme"
+    "name": "subscription-manager-bot",
+    "version": "1.0.0",
+    "description": "Telegram Bot to restrict channel member to paying customers",
+    "main": "index.js",
+    "devDependencies": {
+        "@types/express": "^4.17.8",
+        "@types/node": "^14.11.2",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-typescript": "^3.0.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "prettier": "^2.0.4",
+        "typegram": "^2.2.2",
+        "typescript": "^4.0.3"
+    },
+    "scripts": {
+        "build": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint -c .eslintrc.js index.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/KnorpelSenf/subscription-manager-bot.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/KnorpelSenf/subscription-manager-bot/issues"
+    },
+    "homepage": "https://github.com/KnorpelSenf/subscription-manager-bot#readme"
 }
