--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,6 +24,6 @@ steps:
               '--memory',
               '128MB',
               '--set-env-vars',
-              'BOT_TOKEN=${_BOT_TOKEN}'
+              'BOT_TOKEN=${_BOT_TOKEN},SHEET_ID=${_SHEET_ID}',
           ]
       dir: '.'
