--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
-  "compilerOptions": {
-    "charset": "utf8",
-    "forceConsistentCasingInFileNames": true,
-    "keyofStringsOnly": true,
-    "module": "commonjs",
-    "newLine": "lf",
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedParameters": true,
-    "removeComments": true,
-    "strict": true,
-    "target": "es6",
-    "typeRoots": ["./node_modules/@types"]
-  },
-  "include": ["index.ts"],
-  "exclude": []
+    "compilerOptions": {
+        "charset": "utf8",
+        "forceConsistentCasingInFileNames": true,
+        "keyofStringsOnly": true,
+        "module": "commonjs",
+        "newLine": "lf",
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noUnusedParameters": true,
+        "removeComments": true,
+        "strict": true,
+        "target": "es6"
+    },
+    "include": ["index.ts"],
+    "exclude": ["./node_modules/"]
 }
