--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "noUnusedParameters": true,
         "removeComments": true,
         "strict": true,
-        "target": "es6"
+        "target": "es6",
+        "incremental": true
     },
     "include": ["index.ts"],
     "exclude": ["./node_modules/"]
