--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,6 +24,6 @@ steps:
               '--memory',
               '128MB',
               '--set-env-vars',
-              'BOT_TOKEN=${_BOT_TOKEN},SHEET_ID=${_SHEET_ID},SHEET_CLIENT_EMAIL=${_SHEET_CLIENT_EMAIL},SHEET_PRIVATE_KEY=${_SHEET_PRIVATE_KEY}',
+              'BOT_TOKEN=${_BOT_TOKEN},SHEET_ID=${_SHEET_ID},SHEET_CLIENT_EMAIL=${_SHEET_CLIENT_EMAIL},SHEET_PRIVATE_KEY=${_SHEET_PRIVATE_KEY},INSIDER_CHAT_ID=${INSIDER_CHAT_ID}',
           ]
       dir: '.'
