Fix cloud build config for fresh projects

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,7 @@ steps:
               'deploy',
               'bot-${_FUNCTION_NAME}',
               '--trigger-http',
+              '--allow-unauthenticated',
               '--runtime',
               'nodejs12',
               '--region',
@@ -34,6 +35,7 @@ steps:
               'deploy',
               'end-subscription-${_FUNCTION_NAME}',
               '--trigger-http',
+              '--allow-unauthenticated',
               '--runtime',
               'nodejs12',
               '--region',
@@ -54,6 +56,7 @@ steps:
               'deploy',
               'register',
               '--trigger-http',
+              '--allow-unauthenticated',
               '--runtime',
               'nodejs12',
               '--region',
